--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .audio-img{
     width: 300px;
     height: 300px;
-    border-radius: 30px;
+    border-radius: 30px 30px 0px 0px;
 }
 
 .line{
@@ -31,6 +31,13 @@ body {
     justify-content: center;    /* Alinha horizontalmente ao centro */
     align-items: center; 
 }
+
+.playbutton {
+    border-radius: 0px 0px 30px 30px;
+    width: 300px;
+    margin-top: -7px;
+    background-color: #000000;
+  }
 
 .container {
     max-width: 100%;
