--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .audio-img{
     width: 300px;
     height: 300px;
-    border-radius: 30px 30px 0px 0px;
+    border-radius: 30px;
 }
 
 .line{
@@ -33,10 +33,7 @@ body {
 }
 
 .playbutton {
-    border-radius: 0px 0px 30px 30px;
     width: 300px;
-    margin-top: -7px;
-    background-color: #000000;
   }
 
 .container {
